<resources>
    <string name="app_name">TourDelta</string>
    <string name="home_menu">Home</string>
    <string name="search_menu">Search</string>
    <string name="book_menu">Book</string>
    <string name="explore">Explore Places in Delta</string>
    <string name="tour_discription">Lorem ipsum dolor sit amet,</string>
    <string name="tour_discription_two">consectetur adipiscing elit. Morbi libero.</string>
    <string name="trending_locations">Trending Locations</string>
    <string name="view_all">View All</string>
    <string name="places_explore">Places to Explore</string>
    <string-array name="cities">
        <item>Warri</item>
        <item>Asaba</item>
        <item>Abraka</item>
        <item>Sapale</item>
        <item>Ugheli</item>
        <item>Argbor</item>
        <item>Ozoro</item>
    </string-array>
</resources>